src/main/default/objects/Salesforce_Certification__c/Salesforce_Certification__c.object-meta.xml
<CustomObject>
    <description>An object to store Salesforce Certification information</description>
    <label>Salesforce Certification</label>
    <nameField>
        <label>Salesforce Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>