src/main/default/objects/Salesforce_Certification__c/fields/Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Date__c</fullName>
    <description>Date the Certification was achieved</description>
    <label>Certification Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>