src/main/default/objects/Salesforce_Certification__c/fields/Certification_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Certification_Logo_URL__c</fullName>
    <description>URL that points to the certification Logo</description>
    <label>Certification Logo URL</label>
    <type>Url</type>
</CustomField>