src/main/default/objects/Salesforce_Certification__c/fields/Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>Certification_Name__c</fullName>
    <description>The name of the Certification</description>
    <label>Certification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>