src/main/default/objects/Salesforce_Certification__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Salesforce Certifications</relationshipLabel>
    <relationshipName>Salesforce_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>