src/main/default/objects/Salesforce_Certification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Certification_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>